tests/parser-test-files/bad-files/parse-pattern.1.error
error: Invalid pattern
  --> test:5:7
   |
 5 |    (let #C(1 2) = x)
   |         ^^^^^^^ unknown pattern literal
